--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "@popperjs/core": "^2.11.6",
+    "abab": "^2.0.6",
+    "bootstrap": "^5.2.3",
     "mdbootstrap": "^4.20.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
